Fix clipping of convoy logo

--- a/website/src/css/components/_TestimonialCarousel.scss
+++ b/website/src/css/components/_TestimonialCarousel.scss
@@ -73,7 +73,10 @@
             height: 60px;
         }
     }
+
+    .convoy {
+        .testimonial-carousel__logo {
+            height: 45px;
+        }
+    }
 }
-
-
-//     top: -24px;
